# PKPy

./: .gitignore  LICENSE  README.md  config.json  main.py  model.py  parser.py  plots.py  pyproject.toml  requirements.txt  setup.py  setupy.py  system.json  system_parser.py
.github/workflows/: python-package.yml
PKPy/: __init__.py  model.py  plots.py  system_parser.py
PKPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PKPy/test/: test_model.json  test_model.py  test_model_basic.json  test_model_subc.json  test_parser.py
PKPy/test/parser_tests_jsons/: test_1.json  test_10.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_7.json  test_8.json  test_9.json
docs/source/: conf.py  index.rst
examples/: example_timeseries.pkl  main.py  non_subcutaneous_example.json   non_subcutaneous_example.py  subcutaneous_example.py  system.json
results/: timeseries_test_model.pickle  timeseries_test_model_basic.pickle  timeseries_test_model_subc.pickle
test/: test_model.json  test_parser.py
test/parser_tests_jsons/: test_2.json  test_4.json  test_5.json  test_6.json  test_9.json
